feat: Complete RAG_07 database management infrastructure
- Add comprehensive shell script ecosystem for database operations
- Implement full CRUD operations for FAISS and ChromaDB providers
- Add 75 comprehensive unit tests with pytest framework
- Configure complete linting pipeline (black, ruff, mypy)
- Add structured logging with JSON output
- Implement provider factory pattern for dependency injection
- Add database_management.sh script with create, import, stats, browse, search, delete, demo commands
- Fix all import structure and type checking issues
- Add mypy.ini configuration with proper ignore rules
- Implement browse_vectors method for ChromaDB provider
- Add cleanup methods for all LLM providers
- Configure test coverage reporting (54% achieved)
- Add comprehensive documentation and README files

All tests passing (75/75) with full linting compliance.

--- a/config/app_config.json
+++ b/config/app_config.json
@@ -62,6 +62,34 @@
       ],
       "timeout": 30,
       "max_retries": 3
+    },
+    {
+      "name": "ollama",
+      "api_key_env": "OLLAMA_API_KEY",
+      "base_url": "http://127.0.0.1:11434",
+      "default_model": "llama3.2:3b",
+      "available_models": [
+        "phi3:medium",
+        "llama3.2:3b",
+        "llama2:7b",
+        "nomic-embed-text:latest",
+        "llama3.2:latest",
+        "phi3:mini",
+        "qwen2:0.5b"
+      ],
+      "timeout": 60,
+      "max_retries": 3
+    },
+    {
+      "name": "lmstudio",
+      "api_key_env": "LMSTUDIO_API_KEY",
+      "base_url": "http://192.168.1.11:1234/v1",
+      "default_model": "local-model",
+      "available_models": [
+        "local-model"
+      ],
+      "timeout": 60,
+      "max_retries": 3
     }
   ],
   "vector_providers": [
