--- a/config/app_config.json
+++ b/config/app_config.json
@@ -28,10 +28,11 @@
       "name": "anthropic",
       "api_key_env": "ANTHROPIC_API_KEY",
       "base_url": "https://api.anthropic.com",
-      "default_model": "claude-3-sonnet-20240229",
+      "default_model": "claude-3-5-sonnet-20241022",
       "available_models": [
         "claude-3-haiku-20240307",
-        "claude-3-sonnet-20240229",
+        "claude-3-5-sonnet-20241022",
+        "claude-3-5-haiku-20241022",
         "claude-3-opus-20240229"
       ],
       "timeout": 30,
@@ -41,17 +42,18 @@
       "name": "google",
       "api_key_env": "GOOGLE_API_KEY",
       "base_url": "https://generativelanguage.googleapis.com/v1beta",
-      "default_model": "gemini-pro",
+      "default_model": "gemini-1.5-flash",
       "available_models": [
-        "gemini-pro",
-        "gemini-pro-vision"
+        "gemini-1.5-flash",
+        "gemini-1.5-pro",
+        "gemini-1.0-pro"
       ],
       "timeout": 30,
       "max_retries": 3
     },
     {
       "name": "openrouter",
-      "api_key_env": "OPENROUT_API_KEY",
+      "api_key_env": "OPENROUTER_API_KEY",
       "base_url": "https://openrouter.ai/api/v1",
       "default_model": "anthropic/claude-3-sonnet",
       "available_models": [
