feat: Implement comprehensive automatic documentation system
## 📚 Documentation System Features

### 🔧 Configuration & Setup
- Configure Sphinx with Read the Docs theme for Python documentation
- Set up TypeDoc with TSDoc standards for TypeScript documentation
- Create unified documentation portal with modern responsive design
- Add automated documentation generation scripts

### 📋 Documentation Content
- Add comprehensive RAG_07 application description
- Document multi-provider LLM support (OpenAI, Anthropic, Google, Ollama, OpenRouter, LM Studio)
- Document vector database integration (FAISS, Chroma DB)
- Document model management system with pricing and capabilities
- Add architecture overview with layered design explanation
- Include use cases and getting started guide

### 🛠️ Automation & Scripts
- Create docs_generate.sh with dependency management and browser opening
- Add 8 npm documentation scripts for various workflows
- Implement automatic documentation updates requirement in commit conditions
- Set up live reload development workflow

### 🎯 Quality & Standards
- All tests passing (75/75) ✅
- Documentation builds without errors ✅
- Professional unified documentation portal ✅
- Responsive design with status indicators ✅

### 📝 Files Added/Modified
- typedoc.json, tsdoc.json - TypeScript documentation configuration
- docs/python/conf.py - Sphinx configuration with autodoc
- docs/python/index.rst - Main documentation with detailed app description
- docs/python/modules/ - Module documentation files
- docs_generate.sh - Automated generation script
- docs_index.html - Unified documentation portal
- package.json - Added 8 documentation scripts
- .github/instructions/config.instructions.md - Added doc update requirements

Ready for use with: npm run docs:dev, npm run docs:build, ./docs_generate.sh

--- a/package.json
+++ b/package.json
@@ -19,9 +19,19 @@
     "format:all": "npm run python:format-all && npm run format",
     "lint:all": "npm run python:lint && npm run lint",
     "test": "jest",
-    "test:python": "pytest"
+    "test:python": "pytest",
+    "docs:generate": "./docs_generate.sh",
+    "docs:build": "npm run docs:python",
+    "docs:serve": "cd docs/python/_build/html && python -m http.server 8080",
+    "docs:python": "cd docs/python && sphinx-build -b html . _build/html",
+    "docs:typescript": "typedoc",
+    "docs:clean": "rm -rf docs/python/_build docs/python/.doctrees",
+    "docs:watch": "cd docs/python && sphinx-autobuild . _build/html --port 8080",
+    "docs:open": "python -c \"import webbrowser; webbrowser.open('file://' + __import__('os').getcwd() + '/docs_index.html')\"",
+    "docs:dev": "npm run docs:build && npm run docs:open"
   },
   "devDependencies": {
+    "@microsoft/tsdoc": "^0.14.2",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -30,10 +40,11 @@
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.0.0",
+    "typedoc": "^0.25.13",
+    "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "^5.0.0",
     "vite": "^4.4.0"
   },
-  "dependencies": {},
   "keywords": [
     "python",
     "typescript",
